<resources>
    <string name="app_name">Muistimatto</string>
    <string name="points_label">Pisteet:</string>
    <string name="best_time_label">Paras aika:</string>
    <string name="streak_label">Putki:</string>
    <string name="best_streak_label">Paras putki:</string>
    <string name="ongoingScore">0</string>
    <string name="startGameButton">Uusi peli</string>
    <string name="gameActivityName">Game</string>
    <string name="appTitle"></string>
    <string name="chooseGameModeTitle">Valitse pelimuoto</string>
    <string name="start_new_game">Aloita peli</string>
    <string name="end_game">Lopeta peli</string>
    <string name="show_step_sequence">Näytä askelsarja</string>
    <string name="show_step_sequence_active">Pysäytä askelsarja</string>
    <string name="seq_a">1,3,2,4,5,7,6,8,9,11,10,12,13,15,14,16,17,19,18,20,21,23,22,24,17,19,18,20,13,15,14,16,9,11,10,12,5,7,6,8,1,3,2,4,LRLRLRLRLRLRLRLRLRLRLRLRLRLRLRLRLRLRLRLRLRLR,</string>
    <string name="seq_b">1,4,2,3,8,5,7,6,9,12,10,11,16,13,15,14,17,20,18,19,24,21,23,22,17,20,18,19,16,13,15,14,9,12,10,11,8,5,7,6,1,4,2,3,LRLRRLRLLRLRRLRLLRLRRLRLLRLRRLRLLRLRRLRLLRLR,</string>
    <string name="seq_c">1,6,9,14,17,22,23,20,15,12,7,4,RLRLRLRLRLRL,</string>
    <string name="seq_d">2,3,4,1,7,6,5,8,10,11,12,9,15,14,13,16,18,19,20,17,23,22,21,24,18,19,20,17,15,14,13,16,10,11,12,9,7,6,5,8,2,3,4,1,RLRLLRLRRLRLLRLRRLRLLRLRRLRLLRLRRLRLLRLRRLRL,</string>
    <string-array name="gamemodes_array">
        <item>Askelkuvio</item>
        <item>Kapteeni käskee</item>
        <item>Päässälasku</item>
    </string-array>
    <string-array name="stepsequence_names_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="sequence_a">
        <item>1</item> // ylöspäin kuvio
        <item>3</item>
        <item>2</item>
        <item>4</item>
        <item>LRLR</item>
        <item>1</item> // alaspäin kuvio
        <item>3</item>
        <item>2</item>
        <item>4</item>
        <item>LRLR</item>
    </string-array>
    <string-array name="sequence_b">
        <item>1</item>
        <item>4</item>
        <item>2</item>
        <item>3</item>
        <item>8</item>
        <item>5</item>
        <item>7</item>
        <item>6</item>
        <item>LRLRRLRL</item>
        <item>1</item>
        <item>4</item>
        <item>2</item>
        <item>3</item>
        <item>8</item>
        <item>5</item>
        <item>7</item>
        <item>6</item>
        <item>LRLRRLRL</item>
    </string-array>
</resources>