<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainWrap"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/titleParent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintVertical_weight="1"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/gameSettings"
        >
        <TextView
            android:id="@+id/appTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appTitle"
            android:textSize="32dp"
            android:gravity="center_vertical|center_horizontal"
            />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/gameSettings"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_height="0dp"

        app:layout_constraintVertical_weight="14"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/startGameButton"

        app:layout_constraintTop_toBottomOf="@+id/titleParent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <TextView
            android:id="@+id/chooseModeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chooseGameModeTitle"
            android:textSize="20dp"
            android:padding="10dp"

            />
        <Spinner
            android:id="@+id/chooseGameMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_gravity="start"
            android:padding="10dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startGameButton"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleParent"


        />





</androidx.constraintlayout.widget.ConstraintLayout>