<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gameParent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/game_default_bg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testLayout"
        app:layout_constraintVertical_weight="2">

        <Button
            android:id="@+id/start_new_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"

            android:text="@string/start_new_game" />

        <Button
            android:id="@+id/show_step_sequence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"

            android:text="@string/show_step_sequence" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rightLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/game_default_bg"
        android:orientation="horizontal"

        app:layout_constraintTop_toBottomOf="@+id/topLayout"
        app:layout_constraintBottom_toTopOf="@+id/bottomLayout"

        app:layout_constraintStart_toEndOf="@+id/testLayout"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintVertical_weight="8"
        app:layout_constraintHorizontal_weight="5"
        ></LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/leftLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/game_default_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottomLayout"

        app:layout_constraintEnd_toStartOf="@+id/gameMarkersLeft"
        app:layout_constraintHorizontal_weight="4"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLayout"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_weight="8">


        <TextView
            android:id="@+id/pointsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/points_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/pointsAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            app:layout_constraintTop_toBottomOf="@+id/pointsLabel"
            app:layout_constraintBottom_toTopOf="@id/bestStreakLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="-1dp"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/bestStreakLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/best_streak_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pointsAmount"
            android:paddingTop="10dp"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/bestStreakAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bestStreakLabel"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/streakLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/streak_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bestStreakAmount"
            android:paddingTop="10dp"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/streakAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/streakLabel"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/bestTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/best_time_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/streakAmount"
            android:textSize="20dp"
            android:paddingTop="10dp"/>

        <TextView
            android:id="@+id/bestTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bestTimeLabel"
            android:textSize="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/gameMarkersLeft"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/game_default_bg"
        android:orientation="vertical"

        app:layout_constraintTop_toBottomOf="@+id/topLayout"
        app:layout_constraintBottom_toTopOf="@+id/bottomLayout"

        app:layout_constraintStart_toEndOf="@+id/leftLayout"
        app:layout_constraintEnd_toStartOf="@+id/testLayout"

        app:layout_constraintVertical_weight="8"
        app:layout_constraintHorizontal_weight="1"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/row5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="3dp"
            >
            <View
                android:id="@+id/testIndicator5"
                android:background="@color/game_default_bg"
                android:layout_width="0dp"
                android:layout_height="0dp"

                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="3dp"
            >
            <View
                android:id="@+id/testIndicator4"
                android:background="@color/game_default_bg"
                android:layout_width="0dp"
                android:layout_height="0dp"

                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="3dp"
            >
            <View
                android:id="@+id/testIndicator3"
                android:background="@color/game_default_bg"
                android:layout_width="0dp"
                android:layout_height="0dp"

                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="3dp"
            >
            <View
                android:id="@+id/testIndicator2"
                android:background="@color/game_default_bg"
                android:layout_width="0dp"
                android:layout_height="0dp"

                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="3dp"
            >
            <View
                android:id="@+id/testIndicator1"
                android:background="@color/game_default_bg"
                android:layout_width="0dp"
                android:layout_height="0dp"

                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/row0"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="3dp"
            >

            <View
                android:id="@+id/testIndicator0"
                android:background="@color/game_default_bg"
                android:layout_width="0dp"
                android:layout_height="0dp"

                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/game_default_bg"
        android:orientation="horizontal"

        app:layout_constraintBottom_toTopOf="@+id/testLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_weight="2"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/topLeftLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="5"
            >

            <TextView
                android:id="@+id/scoreCounter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ongoingScore" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/topMidLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="18">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">


            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/whichFootTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:padding="0dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="0dp"
                    android:paddingRight="10dp"
                    android:text="L"
                    android:textColor="#000000"
                    android:textSize="32sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/whichSymbolsTextView"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" /><![CDATA[



            android:text="TextView" />












                ]]>

                <TextView
                    android:id="@+id/whichSymbolsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:paddingLeft="10dp"
                    android:paddingTop="0dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="0dp"
                    android:text="väri numero kirjain"
                    android:textColor="@color/text_default_color"
                    android:textSize="26sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/timerTextView"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/whichFootTextView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/timerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/whichSymbolsTextView"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout><![CDATA[



            android:text="TextView" />


        ]]>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/topRightLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="5"></LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/testLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"

        app:layout_constraintBottom_toTopOf="@+id/bottomLayout"
        app:layout_constraintEnd_toStartOf="@+id/rightLayout"
        app:layout_constraintStart_toEndOf="@+id/gameMarkersLeft"
        app:layout_constraintTop_toBottomOf="@+id/topLayout"
        app:layout_constraintVertical_weight="14"
        app:layout_constraintHorizontal_weight="18">

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>